[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btc-mcp"
version = "0.1.0"
description = "MCP Server for BTC market analysis reports via MacroAgent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
btc-mcp = "btc_mcp.server:run"

[tool.hatch.build.targets.wheel]
packages = ["btc_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
